[project]
name = "programieruebung2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jakob", email = "wj2970@mci4me.at"},
]
dependencies = ["numpy>=2.2.5", "matplotlib>=3.10.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
